--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon src/main.js",
-    "dev": "nodemon --watch \"./src/*.js\" --exec \"npm run server\""
+    "server": "nodemon app.js",
+    "start": "nodemon --watch \"./routes/*.js\" --exec \"npm run server\""
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
+    "ejs": "^3.1.8",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
